tests/should_fail/ghost/non_ghost.stderr
error: called non-ghost function `terminating` in ghost context
 --> non_ghost.rs:9:9
  |
9 |         terminating();
  |         ^^^^^^^^^^^

error: aborting due to 1 previous error

